# cRobot

./: CMakeLists.txt  README.md  fpgaAddressComm.h  fpgaEncoder.h  main.cpp  main.h  motorController.cpp  motorController.h
software/development/: HPS_CONTROL_FPGA  Makefile  main.c  main.h  main2.c  main3.c  main3.h
software/development/functions/: Encoder.cpp  Encoder.hpp  thread_funcs.c  utils.c
